# MTT16

./: .gitignore  .gitmodules  README.md  mtt16.kicad_sym
dispay_block/schematic/: dispay_block.kicad_pcb  dispay_block.kicad_pro  dispay_block.kicad_sch
dispay_block/software/: Makefile  main.c
keypad/schematic/: fp-lib-table  keypad.kicad_pcb  keypad.kicad_pro  keypad.kicad_sch
motherboard/schematic/: mcu.kicad_sch  motherboard.kicad_pcb  peripherals.kicad_sch
motherboard/software/: .clangd  CMakeLists.txt  pico_sdk_import.cmake  readme.txt
motherboard/software/src/: main.c  midi.c  midi.h  midi_tx.pio  sequencer.c  sequencer.h  shared.c  shared.h  storage.c  storage.h
motherboard/software/src/app/: main.c
motherboard/software/src/drivers/display/: display_driver.c  display_driver.h
motherboard/software/src/drivers/midi/: midi_driver.c  midi_driver.h  midi_tx.pio
motherboard/software/src/drivers/sd/: sd_driver.c  sd_driver.h
motherboard/software/src/drivers/sd/sd_config/: sd_driver_config.c
motherboard/software/src/sd_config/: fix_pio_offset.patch  hw_config.h  sd_driver_config.c
motherboard/software/src/services/: midi_types.h  project_types.h
motherboard/software/src/services/sequencer/: sequencer.c  sequencer.h
motherboard/software/src/services/storage/: storage.c  storage.h
motherboard/software/src/services/ui/: display_manager.c  display_manager.h
mtt16.pretty/: SK6812-MINI-E.kicad_mod  mouse_bite.kicad_mod  tact_switch.kicad_mod
schematics/: mtt16.kicad_sym
schematics/dispay_block/: char_block.kicad_sch  dispay_block.kicad_pcb  dispay_block.kicad_pro  dispay_block.kicad_sch  ~dispay_block.kicad_sch.lck
schematics/keypad/: keypad.kicad_pcb  keypad.kicad_pro  keypad.kicad_sch
schematics/motherboard/: display_control.kicad_sch  motherboard.kicad_pro  motherboard.kicad_sch
schematics/mtt16.pretty/: 75mm_slide_pot.kicad_mod  MIDI_DIN5.kicad_mod  RP2350A_QFN-60_EP_7.75x7.75_Pitch0.4mm.kicad_mod  SK6812-MINI-E.kicad_mod  SL4521G_slide_pot.kicad_mod  tact_switch.kicad_mod
